Fix layout issues with long names (#424)

--- a/nextcloudappstore/core/static/assets/css/style.css
+++ b/nextcloudappstore/core/static/assets/css/style.css
@@ -239,6 +239,12 @@ form .text-danger {
     height: 200px;
 }
 
+.app-list-container h3 {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
 .app-list-container img {
     max-width: 100%;
     max-height: 100%;
